<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_title">My Nanodegree Apps!</string>

    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_bigger">Build IT Bigger</string>
    <string name="xyz_reader">xyz reader</string>
    <string name="capstone">Capstone:my own project</string>
</resources>
